Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106103

Deleting a Binding doesn't restore

    XMLWordPrintable

Details

    • e2fa7ab91 (dev), 5b25670c1 (6.8)

    Description

      Deleting a Binding doesn't restore the previous binding or value:

      For example in the following code I would expect that after clicking a second time on the checkbox (unchecking it), its text would fallback to "initial binding : false" but it stays at "dynamic binding : true". (the binding isn't updated anymore but isn't restored either).

      CheckBox {
          id: checkbox
          text: "initial binding : " + checked
          Loader {
              id: loader
              active: checkbox.checked
              sourceComponent: Binding {
                  target: checkbox
                  property: "text"
                  value: "dynamic binding : " + checkbox.checked
                  restoreMode: Binding.RestoreBindingOrValue
              }
          }
      }
      

      Attachments

        For Gerrit Dashboard: QTBUG-106103
        # Subject Branch Project Status CR V

        Activity

          People

            fabiankosmale Fabian Kosmale
            grecko Pierre-Yves Siret
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes