src/qmlmeta/types/qqmlbind_p.h
@@ -52,6 +52,7 @@ private:
 
 public:
     QQmlBind(QObject *parent=nullptr);
+    ~QQmlBind();
 
     bool when() const;
     void setWhen(bool);
